--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <!-- Marker.Rotate.js Plugin -->
     <script src="https://rawcdn.githack.com/shramov/leaflet-plugins/master/layer/Marker.Rotate.js"></script>
+    
+    <!-- JS Files -->
+    <script src="js/config.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/map.js"></script>
 </body>
 </html>
