--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- JS Files -->
     <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/route.js"></script>
     <script src="js/map.js"></script>
 </body>
 </html>
