--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/route.js"></script>
+    <script src="js/boat.js"></script>
     <script src="js/map.js"></script>
 </body>
 </html>
