--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>RawCat - Thin</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel='stylesheet' href='https://unpkg.com/leaflet/dist/leaflet.css' />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'>
+    <link rel='stylesheet' href='css/style.css' />
 </head>
 <body>
-    <div id="map"></div>
+    <div id='map'></div>
 
     <!-- Leaflet Library -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src='https://unpkg.com/leaflet/dist/leaflet.js'></script>
+
+    <!-- Leaflet.VectorGrid (for MVT / PBF vector tiles) -->
+    <script src='https://unpkg.com/leaflet.vectorgrid/dist/Leaflet.VectorGrid.bundled.js'></script>
+
     <!-- Marker.Rotate.js Plugin -->
-    <script src="https://rawcdn.githack.com/shramov/leaflet-plugins/master/layer/Marker.Rotate.js"></script>
-    
+    <script src='https://rawcdn.githack.com/shramov/leaflet-plugins/master/layer/Marker.Rotate.js'></script>
+
     <!-- JS Files -->
-    <script src="js/config.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/route.js"></script>
-    <script src="js/boat.js"></script>
-    <script src="js/popup.js"></script>
-    <script src="js/map.js"></script>
+    <script src='js/config.js'></script>
+    <script src='js/utils.js'></script>
+    <script src='js/route.js'></script>
+    <script src='js/boat.js'></script>
+    <script src='js/popup.js'></script>
+    <script src='js/map.js'></script>
 </body>
 </html>
