--- a/index.html
+++ b/index.html
@@ -1,31 +1,80 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>RawCat - Thin</title>
-    <link rel='stylesheet' href='https://unpkg.com/leaflet/dist/leaflet.css' />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'>
-    <link rel='stylesheet' href='css/style.css' />
-</head>
-<body>
-    <div id='map'></div>
+<!doctype html>
+<html lang='en'>
+    <head>
+        <meta charset='utf-8' />
+        <meta name='viewport' content='width=device-width, initial-scale=1' />
+        <title>Skippo style - Mapbox GL JS</title>
 
-    <!-- Leaflet Library -->
-    <script src='https://unpkg.com/leaflet/dist/leaflet.js'></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
 
-    <!-- Leaflet.VectorGrid (for MVT / PBF vector tiles) -->
-    <script src='https://unpkg.com/leaflet.vectorgrid/dist/Leaflet.VectorGrid.bundled.js'></script>
+        <style>
+            html, body {
+                height: 100%;
+                margin: 0;
+            }
 
-    <!-- Marker.Rotate.js Plugin -->
-    <script src='https://rawcdn.githack.com/shramov/leaflet-plugins/master/layer/Marker.Rotate.js'></script>
+            #map {
+                height: 100%;
+                width: 100%;
+            }
 
-    <!-- JS Files -->
-    <script src='js/config.js'></script>
-    <script src='js/utils.js'></script>
-    <script src='js/route.js'></script>
-    <script src='js/boat.js'></script>
-    <script src='js/popup.js'></script>
-    <script src='js/map.js'></script>
-</body>
+            .boat-marker {
+                width: 34px;
+                height: 34px;
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+                transform-origin: center;
+            }
+
+            .ref-marker {
+                width: 30px;
+                height: 30px;
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+        </style>
+    </head>
+    <body>
+        <div id='map'></div>
+
+        <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+        <script src='./js/config.js'></script>
+        <script src='./js/style-fixer.js'></script>
+        <script src='./js/utils.js'></script>
+        <script src='./js/boat.js'></script>
+
+
+        <script>
+            mapboxgl.accessToken = window.MAPBOX_ACCESS_TOKEN;
+
+            const styleUrl = 'https://mapresources.skippo.cloud/20250829/style/hg_light.json';
+
+            (async () => {
+                const style = await loadAndFixStyle(styleUrl);
+
+                const map = new mapboxgl.Map({
+                    container: 'map',
+                    style,
+                    center: [11.89467333, 57.58759333],
+                    zoom: 14
+                });
+
+                map.addControl(
+                    new mapboxgl.NavigationControl({ visualizePitch: true }),
+                    'top-right'
+                );
+
+                map.addControl(
+                    new mapboxgl.ScaleControl({ maxWidth: 140, unit: 'metric' }),
+                    'bottom-left'
+                );
+
+                map.on('load', () => {
+                    initializeBoat(map);
+                });
+            })();
+        </script>
+    </body>
 </html>
