--- a/index.html
+++ b/index.html
@@ -6,41 +6,13 @@
         <title>Skippo style - Mapbox GL JS</title>
 
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
-
-        <style>
-            html, body {
-                height: 100%;
-                margin: 0;
-            }
-
-            #map {
-                height: 100%;
-                width: 100%;
-            }
-
-            .boat-marker {
-                width: 34px;
-                height: 34px;
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: center;
-                transform-origin: center;
-            }
-
-            .ref-marker {
-                width: 30px;
-                height: 30px;
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: center;
-            }
-        </style>
+        <link href='./css/style.css' rel='stylesheet' />
     </head>
     <body>
         <div id='map'></div>
 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-        <script src='./js/config.js'></script>
+        <script src='./credentials.js'></script>
         <script src='./js/style-fixer.js'></script>
         <script src='./js/utils.js'></script>
         <script src='./js/boat.js'></script>
