--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id='map'></div>
 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-        <script src='./credentials.js'></script>
         <script src='./js/config.js'></script>
+        <script src='./js/followBoatControl.js'></script>   
         <script src='./js/style-fixer.js'></script>
         <script src='./js/utils.js'></script>
         <script src='./js/boat.js'></script>
@@ -39,6 +39,8 @@
                     new mapboxgl.NavigationControl({ visualizePitch: true }),
                     'top-right'
                 );
+
+                map.addControl(new FollowBoatControl(), 'top-right');
 
                 map.addControl(
                     new mapboxgl.ScaleControl({ maxWidth: 140, unit: 'metric' }),
