--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
         <div id='map'></div>
 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+
+        <!-- If you use Font Awesome classes in the popup, include it -->
+        <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' /> -->
+
         <script src='./js/config.js'></script>
-        <script src='./js/followBoatControl.js'></script>   
+        <script src='./js/followBoatControl.js'></script>
         <script src='./js/style-fixer.js'></script>
         <script src='./js/utils.js'></script>
+
         <script src='./js/boat.js'></script>
         <script src='./js/route.js'></script>
-
+        <script src='./js/popup.js'></script>
 
         <script>
             mapboxgl.accessToken = mapboxAccessToken;
@@ -49,8 +54,13 @@
 
                 map.on('load', () => {
                     initializeBoat(map);
+
                     const route = window.initializeRoute(map);
                     route.drawRoute();
+
+                    createPopup(map, route);
+
+                    map.doubleClickZoom.disable();
 
                     const disableFollowBoat = () => {
                         if (!followBoat) {
