Add Font Awesome v4 stylesheet
Include Font Awesome 4.7.0 in the document head so fa fa-* icon classes (e.g. fa-plus, fa-map-pin) render correctly in popups. Removed the redundant commented-out include near the scripts and added a note about the matching v4 icon classes.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
         <link href='./css/style.css' rel='stylesheet' />
+
+        <!-- Font Awesome (v4, matches fa fa-plus / fa fa-map-pin) -->
+        <link
+            rel='stylesheet'
+            href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'
+        />
     </head>
     <body>
         <div id='map'></div>
 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-
-        <!-- If you use Font Awesome classes in the popup, include it -->
-        <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' /> -->
 
         <script src='./js/config.js'></script>
         <script src='./js/followBoatControl.js'></script>
